# loopguard

./: .gitignore  LICENSE  README.md  pyproject.toml
loopguard/: __init__.py  core.py
tests/: test_loopguard.py
