[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopguard"
version = "0.2.0"
description = "Protect AI agents from infinite loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "LoopGuard Contributors" }
]
keywords = ["ai", "agents", "llm", "loop", "detection", "langchain", "autogen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yolojewjitsu/loopguard"
Repository = "https://github.com/yolojewjitsu/loopguard"
Issues = "https://github.com/yolojewjitsu/loopguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["loopguard"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py39"
